<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dataEntryLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:visibility="visible"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/dataTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/itemName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dataTabLayout"/>
        <EditText
            android:id="@+id/itemAmountBS"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="number"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@+id/itemName"
            app:layout_constraintTop_toBottomOf="@+id/dataTabLayout"/>

        <ImageView
            android:id="@+id/done"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_arrow_circle_right_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/itemAmountBS"
            app:layout_constraintBottom_toBottomOf="@+id/itemAmountBS"
            app:layout_constraintStart_toEndOf="@+id/itemAmountBS"/>

        <EditText
            android:id="@+id/descriptionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:maxLines="1"
            android:hint="@string/describe_here"
            app:layout_constraintTop_toBottomOf="@+id/itemAmountBS"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>